--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "*",
+        "twbs/bootstrap": "5.3.0-alpha1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
